# fx_strategies

./: .gitignore  README.md  pyproject.toml  vbt.yml
data/: MANIFEST.json
docs/: apogee_quantitative_report.md  llm.txt  phase18_strategy_report.md  vbt_native_cheatsheet.md  vbt_pro_bug_report.md
example/: ims_pipeline.py  main.py
notebooks/: 01_mr_v1_band_reversion.ipynb  02_mr_v2_zscore_exit.ipynb  03_mr_v3_session_filter.ipynb  04_mr_v4_adaptive_ewm.ipynb  05_ou_mean_reversion.ipynb  06_kalman_trend.ipynb  07_donchian_breakout.ipynb  08_composite_fx_alpha.ipynb  _generate_notebooks.py  nb_utils.py
scripts/: README.md  audit_vbt_native.py  bench_diff.py  bench_ram.py  bench_verify.py  build_latex_report_assets.py  build_phase18_latex_assets.py  compile_latex_report.sh  compile_phase18_report.sh  compute_dsr.py  generate_phase18_report_artifacts.py  generate_report_artifacts.py  generate_weight_sensitivity_figures.py  stress_test_combined.py  sweep_combinations.py  sweep_dd_cap_schedule.py  sweep_fourth_sleeve.py  sweep_leverage_grid.py  sweep_phase19.py  sweep_phase20b_fourth_sleeve.py  sweep_phase20c_dd_cap.py  sweep_weight_grid.py  update_data_manifest.py
src/: bt_bbands_deep.py  bt_ma_rsi_combo.py  bt_multifactor_deep.py  bt_rsi_deep.py  composite_fx_alpha.py  cv_rsi_validated.py  donchian_breakout.py  kalman_trend.py  mr_v1_no_leverage.py  mr_v3_session_filter.py  mr_v4_adaptive_bands.py  ou_mean_reversion.py  run_all_variations.py  run_strategy.py  strategy_explorer.py  utils.py
tests/: _generate_snapshots.py  conftest.py  test_backtest.py  test_cpcv.py  (+18 more)
(+150 files in other folders)
