[project]
name = "fx-strategies"
version = "0.1.0"
description = "Composite FX Alpha: Multi-Signal Currency Strategy"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0,<3",
    "pyarrow",
    "numpy",
    "numba",
    "plotly",
    "pandas-stubs~=2.3.3",
    "scipy>=1.11",
    "arch>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ipython"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
